achievement ellipsis spacing fix

--- a/RossDevs/static/RossDevs/css/style.css
+++ b/RossDevs/static/RossDevs/css/style.css
@@ -187,7 +187,7 @@
     width: 80vw;
 }
 
-.name.achievement .span {
+.name.achievement span {
     margin-left: -6px;
 }
 
